Reset the cull rect to an infinite rect underneath an SVG child transform.

This matches behavior already implemented in PaintLayerPainter, which was added
to greatly simplify the problem of detecting clip property node invalidations
upon change of clip (but not addition or removal of such clips).

With the rollout of SPv175, invalidation under SVG transforms is also subject
to this need. Before SPv175, non-composited transform mutations caused a forced
subtree invalidation. Now there is an invalidation of the property on the PaintChunk
under the transform, but the chunk itself is not re-painted. This requires
the chunk to be complete and not partially culled out, which is why
there is a requirement for an infinite cull rect.

Note that this will increase performance of animations under SVG transform,
which no longer need to paint the sub-content. (This same type of use case
for CSS transform was another justification for the infinite cull rect
in PaintLayerPainter).

Bug: 862318

Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ibb65c7fd491b1be725a6aa05a33e9ba7cc03782d
Reviewed-on: https://chromium-review.googlesource.com/1139583
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575855}
Former-commit-id: 6f63a06d5f863ce949265ce072d1d6d99cf5d3be